# CHTL-NEW

./: --help  --stats  -o  CHANGELOG.md  CHTL-SYNTAX-FEATURES-COMPLETE.md  CHTL_CJMOD_COMPLETE_IMPLEMENTATION_REPORT.md  CHTL_COMPILER_CORRECTION_PROGRESS_REPORT.md  CHTL_COMPLETE_IMPLEMENTATION_FINAL_REPORT.md  CHTL_PRODUCTION_READY_FINAL_REPORT.md  CHTL_PROJECT_FINAL_COMPLETION_REPORT.md  CHTL_PROJECT_FINAL_COMPLETION_WITH_CROSS_PLATFORM_SUPPORT.md  CHTL_SYNTAX_FIXED_FINAL_COMPLETION_REPORT.md  CHTL_VSCODE_CJMOD_INTEGRATION_COMPLETE_REPORT.md  CHTL完整实现目标Todo.md  CHTL语法文档.md  CHTL语法特征完整记录与验证报告.md  CMakeLists.txt  CMakeLists_CoreOnly.txt  CMakeLists_CrossCompile.txt  CMakeLists_Professional.txt  CMakeLists_Simple_Windows.txt  CMakeLists_Windows.txt  CMakeLists_Windows_Simple.txt  FINAL_COMPLETION_REPORT.md  FINAL_PROFESSIONAL_COMPLETION_REPORT.md  LICENSE  PHASE1-COMPLETION-REPORT.md  PHASE2-COMPLETION-REPORT.md  PHASE4-COMPLETION-AND-PROGRESS-REPORT.md  PROJECT_FINAL_COMPLETION.md  PROJECT_STATUS_SUMMARY.md  README.md  WINDOWS_COMPILER_ISSUE_ANALYSIS.md  build_cross_compile.sh  cjmod_test.html  compile_times.txt  comprehensive_output.html  comprehensive_test.chtl  core  create_release.bat  (+29 more)
CHTL/: CMakeLists.txt  README.md  TestJSModule.cjmod  TestModule.cmod  simple_config.html  simple_except.html  test_attr_var_simple.html  test_attribute_nodes.html  test_attributes2.html  test_attributes_debug.html  test_boundary.html  test_boundary_simple.html  test_ce.html  test_css.html  test_css_simple.html  test_cycle.html  test_except.html  test_import_enhanced.html  test_import_parse.html  test_javascript.html  test_lexer  test_lexer.cpp  test_local_style.html  test_local_style_fixed.html  test_minimal_hash.html  test_no_import.html  test_no_template.html  test_output.html  test_simple_attr.html  test_style_all_quoted.html  test_style_background.html  test_style_color_hex.html  test_style_color_name.html  test_style_comprehensive.html  test_style_hash.html  test_style_hex_quoted.html  test_style_minimal.html  test_style_no_unit.html  test_style_simple.html  test_style_units.html  (+6 more)
CHTL/examples/: hello.chtl  namespace_lib.chtl  simple_config.chtl  simple_except.chtl  simple_lib.chtl  simple_namespace.chtl  test_all_templates.chtl  test_attr_var_simple.chtl  test_attr_with_var.chtl  test_attribute_nodes.chtl  test_attributes.chtl  test_basic.chtl  test_basic_complete.chtl  test_basic_complete.html  test_basic_complete_fixed.html  test_boundary_simple.chtl  test_ce_equivalence.chtl  test_cmod_import.chtl  test_complete_features.chtl  test_complete_features.html  test_comprehensive.chtl  test_comprehensive.html  test_comprehensive_fixed.html  test_configuration.chtl  test_css.chtl  test_css_simple.chtl  test_cycle_import.chtl  test_except.chtl  test_features.chtl  test_features.html  test_final.chtl  test_full_qualified.chtl  test_import_basic.chtl  test_import_enhanced.chtl  test_import_parse.chtl  test_import_simple.chtl  test_inherit.chtl  test_insert_delete.chtl  test_javascript.chtl  test_js_simple.chtl  (+69 more)
CHTL/examples/TestJSModule/info/: TestJSModule.chtl
CHTL/examples/lib/: cycle_a.chtl  cycle_b.chtl  styles.chtl  utils.chtl
CHTL/include/CHTL/: CHTLCompiler.h
CHTL/include/CHTL/AST/: ASTNode.h  ASTVisitor.h  TemplateNodes.h
CHTL/include/CHTL/Core/: CompileResult.h  ConstraintChecker.h  Context.h  GlobalMap.h  SpecializationProcessor.h  State.h  Token.h
CHTL/include/CHTL/Generator/: Generator.h
CHTL/include/CHTL/Lexer/: Lexer.h
CHTL/include/CHTL/Parser/: Parser.h
CHTL/include/CHTLJS/: CHTLJSCompiler.h
CHTL/include/CHTLJS/AST/: Nodes.h
CHTL/include/CHTLJS/Core/: Context.h  GlobalMap.h  State.h  Token.h
CHTL/include/CHTLJS/Generator/: Generator.h
CHTL/include/CHTLJS/Lexer/: Lexer.h
CHTL/include/CHTLJS/Parser/: Parser.h
CHTL/include/CJMOD/: API.h  CJMODHandler.h
CHTL/include/CSS/: CSSCompiler.h  CSSErrorListener.h  CSSVisitor.h
CHTL/include/Common/: CMODHandler.h  CodeFragment.h  Error.h  ICompiler.h  ImportManager.h  Logger.h  SyntaxConstraint.h  Version.h
CHTL/include/Dispatcher/: CompilerDispatcher.h
CHTL/include/JavaScript/: JavaScriptCompiler.h  JavaScriptErrorListener.h  JavaScriptVisitor.h
CHTL/include/Scanner/: CHTLUnifiedScanner.h
CHTL/src/: main.cpp
CHTL/src/CHTL/: CHTLCompiler.cpp  CMakeLists.txt
CHTL/src/CHTL/AST/: ASTNode.cpp  ASTVisitor.cpp  CustomNodes.cpp  StyleNodes.cpp  TemplateNodes.cpp
CHTL/src/CHTL/Core/: ConstraintChecker.cpp  Context.cpp  GlobalMap.cpp  SpecializationProcessor.cpp  State.cpp  Token.cpp
CHTL/src/CHTL/Generator/: Generator.cpp
CHTL/src/CHTL/Lexer/: Lexer.cpp
CHTL/src/CHTL/Parser/: Parser.cpp
CHTL/src/CHTL/Utils/: FileUtils.cpp  StringUtils.cpp
CHTL/src/CHTLJS/: CHTLJSCompiler.cpp  CMakeLists.txt
CHTL/src/CHTLJS/AST/: ASTNode.cpp  AnimateNode.cpp  ListenerNode.cpp  ModuleNode.cpp  SelectorNode.cpp  VirtualObjectNode.cpp
CHTL/src/CHTLJS/Core/: Context.cpp  GlobalMap.cpp  State.cpp  Token.cpp
CHTL/src/CHTLJS/Generator/: Generator.cpp  ModuleGenerator.cpp  SelectorTransformer.cpp
CHTL/src/CHTLJS/Lexer/: Lexer.cpp
CHTL/src/CHTLJS/Parser/: Parser.cpp
CHTL/src/CHTLJS/Utils/: EventDelegationManager.cpp  SelectorCache.cpp
CHTL/src/CJMOD/: API.cpp  CJMODHandler.cpp  CMakeLists.txt  cjmod_tool.cpp
CHTL/src/CMOD/: CMODHandler.cpp  CMakeLists.txt  cmod_tool.cpp
CHTL/src/CSS/: CMakeLists.txt  CSSCompiler.cpp
CHTL/src/Common/: CMakeLists.txt  ImportManager.cpp  SyntaxConstraint.cpp
CHTL/src/Dispatcher/: CMakeLists.txt  CompilerDispatcher.cpp
CHTL/src/JavaScript/: CMakeLists.txt  JavaScriptCompiler.cpp
CHTL/src/Scanner/: CHTLUnifiedScanner.cpp  CMakeLists.txt
CHTL/tests/: CMakeLists.txt
CHTL/unpacked_cjmod/src/: PowerOperator.cpp
CHTL/unpacked_module/info/: TestModule.chtl
CHTL/unpacked_module/src/: TestModule.chtl
CHTL_Release_v1.0.0/: README.md  install.bat  install.sh
build_windows/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/: windows-cross-compile.cmake
docs/: CHTL_JS开发指南.md  CJMOD开发指南.md  CJMOD开发指南_错误版.md  Development_Guide.md
src/: main.cpp  (+5 more)
(+348 files in other folders)
